# bazel-remote-apis-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build.yaml  publish.yaml  update_vendor.yml
scripts/: update_vendor.sh
src/: lib.rs
src/generated_json/: .gitignore  build.bazel.remote.asset.v1.rs  build.bazel.remote.execution.v2.rs  build.bazel.remote.logstream.v1.rs  build.bazel.remote.logstream.v1.serde.rs  build.bazel.semver.serde.rs  google.bytestream.rs  google.longrunning.rs  google.protobuf.serde.rs
src/generated_serde/: build.bazel.remote.asset.v1.serde.rs  build.bazel.remote.execution.v2.rs  build.bazel.remote.execution.v2.serde.rs  google.api.rs  google.api.serde.rs  google.bytestream.serde.rs  google.rpc.rs
