[package]
name = "bazel-remote-apis"
version = "0.15.0"
edition = "2021"
publish = true
description = "Rust bindings for Bazel Remote APIs"
license = "MIT"
homepage = "https://github.com/amkartashov/bazel-remote-apis-rust"
repository = "https://github.com/amkartashov/bazel-remote-apis-rust.git"

[features]
serde = ["dep:pbjson", "dep:pbjson-types", "dep:serde"]
codegen = [ "dep:tonic-build", "dep:pbjson-build" ]

[package.metadata.docs.rs]
features = [ "serde" ]

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
serde = { version = "1.0.217", optional = true }
pbjson = { version = "0.7", optional = true }
pbjson-types = { version = "0.7", optional = true }

[dev-dependencies]
serde_json = "1.0.135"

[build-dependencies]
tonic-build = { version = "0.12.3", optional = true }
pbjson-build = { version = "0.7", optional = true }
