[package]
name = "bazel-remote-apis"
version = "0.20.0"
edition = "2021"
publish = true
description = "Rust bindings for Bazel Remote APIs"
license = "MIT"
homepage = "https://github.com/amkartashov/bazel-remote-apis-rust"
repository = "https://github.com/amkartashov/bazel-remote-apis-rust.git"
exclude = ["vendor/", ".github/"]

[features]
serde = ["dep:pbjson", "dep:pbjson-types", "dep:serde"]
codegen = [ "dep:tonic-prost-build", "dep:pbjson-build" ]

[package.metadata.docs.rs]
features = [ "serde" ]

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
serde = { version = "1.0.228", optional = true }
pbjson = { version = "0.8", optional = true }
pbjson-types = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1.0.145"

[build-dependencies]
tonic-prost-build = { version = "0.14.2", optional = true }
pbjson-build = { version = "0.8", optional = true }
